argocd/argocd-install/repo-server-dns-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-repo-server
  namespace: argocd
spec:
  template:
    spec:
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 10.43.0.10
        options:
          - name: single-request-reopen
