argocd/argocd-install/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server
  namespace: argocd
  labels:
    app: argocd-server
  annotations:
    cert-manager.io/cluster-issuer: homelab-ca-issuer
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  tls:
  - hosts:
    - argocd.nicholasshaw.cloud
    secretName: argocd-tls
  rules:
  - host: argocd.nicholasshaw.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
